# model3d-gltf

./: Cargo.toml
src/: asset.rs  buffer_usage.rs  buffers_accessors.rs  deserialize.rs  error.rs  glb.rs  gltf.rs  gltf_json_value.rs  image.rs  lib.rs  material.rs  node.rs  object_data.rs  od_use.rs  primitives_meshes.rs  scene.rs  serialize.rs  texture.rs  traits.rs  types.rs  utils.rs
tests/: test_gltf.rs
