[package]
name = "mod3d-gltf"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serde", "serde_json"]
serde = ["dep:serde"]
serde_json = ["serde", "dep:serde_json"]

[dependencies]
geo-nd.workspace = true
indent-display.workspace = true
mod3d-base.workspace = true
base64.workspace = true
thiserror.workspace = true

[dependencies.serde]
optional = true
workspace = true
features = ["derive"]

[dependencies.serde_json]
optional = true
workspace = true
